--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
 EMAIL=abinayab.22cse@kongu.edu
 EMAIL_PASSWORD=abinaya2004
-MONGO_URI=mongodb://localhost:27017/habitTracker
+MONGO_URI=mongodb+srv://abinayab22cse:PtFKRVb30BP5ZgcK@cluster0.id6aa.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+PORT=5000
